# monty

./: .dockerignore  CMakeLists.txt  Dockerfile  README.MD
inc/: ascii.h  common.h  game.h  simulator.h
lib/: CMakeLists.txt
lib/terminal_ui/: CMakeLists.txt  terminal_ui.c  terminal_ui.h
src/: ascii.c  game.c  main.c  simulator.c
